--- a/src/template.html
+++ b/src/template.html
@@ -14,10 +14,6 @@
             <button>Location</button>
         </nav>
     </header>
-    <div id="content">
-        <img src="./img/restaurant.jpg" alt="" style="width:50%; height:50%;">
-        <h1>Super restaurant</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit voluptas, natus, voluptatibus eius nam at vero voluptate maxime beatae est! Sunt pariatur doloribus, maxime distinctio iste eum nobis rem?</p>
-    </div>
+    <div id="content"></div>
 </body>
 </html>
