make pages that switch nicely

--- a/src/template.html
+++ b/src/template.html
@@ -8,10 +8,10 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
-            <button>Location</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
+            <button id="location">Location</button>
         </nav>
     </header>
     <div id="content"></div>
